fixed description width which was going out of the screen

--- a/src/Styles/banner.css
+++ b/src/Styles/banner.css
@@ -15,10 +15,9 @@
   padding-bottom: 0.3rem;
 }
 .desc {
-  width: 45rem;
   line-height: 1.3;
   padding-top: 1rem;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   max-width: 360px;
   height: 80px;
 }
